--- a/weather/index.html
+++ b/weather/index.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>🌿なじゅの天気予報🪴</title>
   <link rel="icon" type="image/png" href="https://www.nazyuna.org/data/image/icon.png">
-  <link rel="stylesheet" href="https://www.nazyuna.org/data/css/style.css">
+  <link rel="stylesheet" href="data/css/style.css">
 </head>
 <body>
     <div class="container">
