--- a/weather/index.html
+++ b/weather/index.html
@@ -68,7 +68,7 @@
             <div class="url-text2"id="url-button">🌿IRIAM🪴</div>
             <div class="url-text2"id="url-button2">🌿Twitter🪴</div>
             <p class="text_3"><br>このサイトの情報は気象庁の予報をもとに表示しています。</p>
-            <p class="text_3">GPSから取得した位置情報と表示する情報が一部異なることがあります。<br>また、GPSの情報はは収集しておりません。</p>
+            <p class="text_3">GPSから取得した位置情報と表示する情報が一部異なることがあります。<br>また、GPSの情報は収集しておりません。</p>
         </div>
     </div>
     <script src="data/js/script.js"></script>
