--- a/weather/index.html
+++ b/weather/index.html
@@ -61,7 +61,7 @@
                 <input type="checkbox" name="s1" id="i1" checked><label for="i1" class="checkbox-text">今日</label>
                 <input type="checkbox" name="s2" id="i2" checked><label for="i2" class="checkbox-text">明日</label>
                 <input type="checkbox" name="s3" id="i3" checked><label for="i3" class="checkbox-text">明後日</label>
-                <!--<input type="checkbox" name="s4" id="i4" checked><label for="i4" class="checkbox-text">イベント</label>-->
+                <input type="checkbox" name="s4" id="i4" checked><label for="i4" class="checkbox-text">イベント</label>
                 <div class="cb"></div>
             </div>
             <p class="url-text2"><br>🌿芹梨なずな🪴</p>
