--- a/app/1stAnniversary/index.html
+++ b/app/1stAnniversary/index.html
@@ -28,7 +28,7 @@
   <div class="back-left-leg"></div>
   <div class="back-right-leg"></div>
   <div class="tail"></div>
-  <div class="speech-bubble" style="top: -280px; left: 60%;" id="speechBubble">
+  <div class="speech-bubble" style="bottom: 130%; left: 60%;" id="speechBubble">
     ページを開き直してください。
   </div>
 </div>
